--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paññāsāstra International School - Van Hong (PSIS VH)</title>
+    <!-- Favicon Update: Using an embedded SVG data URI for modern, single-file favicon support (Yellow Star) -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath fill='%23FBBF24' d='M50 0L65.45 34.54L100 38.82L75 64.18L81.8 100L50 81.8L18.2 100L25 64.18L0 38.82L34.55 34.54Z'/%3E%3C/svg%3E">
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Configure Tailwind to use Inter font and custom colors -->
