--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!-- FAVICON IMPLEMENTATION: Using a single SVG data URI for all sizes for single-file compatibility -->
-    <!-- SVG data URI source: A bright yellow star (&#10031;) -->
-    <!-- NOTE: In a real project with external files, the hrefs would point to PNG/ICO files. -->
-    <link rel="apple-touch-icon" sizes="180x180" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23FBBF24%22>&#10031;</text></svg>">
-    <link rel="icon" type="image/png" sizes="32x32" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23FBBF24%22>&#10031;</text></svg>">
-    <link rel="icon" type="image/png" sizes="16x16" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23FBBF24%22>&#10031;</text></svg>">
-    <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23FBBF24%22>&#10031;</text></svg>">
-    <link rel="icon" type="image/png" sizes="192x192" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23FBBF24%22>&#10031;</text></svg>">
-    <link rel="icon" type="image/png" sizes="512x512" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23FBBF24%22>&#10031;</text></svg>">
+    <!-- FAVICON IMPLEMENTATION: Updated to a Red Apple SVG data URI (&#127822;) -->
+    <!-- The color #DC2626 is a bright red, suitable for an apple. -->
+    <link rel="apple-touch-icon" sizes="180x180" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23DC2626%22>&#127822;</text></svg>">
+    <link rel="icon" type="image/png" sizes="32x32" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23DC2626%22>&#127822;</text></svg>">
+    <link rel="icon" type="image/png" sizes="16x16" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23DC2626%22>&#127822;</text></svg>">
+    <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23DC2626%22>&#127822;</text></svg>">
+    <link rel="icon" type="image/png" sizes="192x192" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23DC2626%22>&#127822;</text></svg>">
+    <link rel="icon" type="image/png" sizes="512x512" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23DC2626%22>&#127822;</text></svg>">
+    <!-- Included a link for the new /logo.png path using the same data URI -->
+    <link rel="icon" type="image/png" sizes="64x64" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22 fill=%22%23DC2626%22>&#127822;</text></svg>">
+
 
     <title>Paññāsāstra International School - Van Hong (PSIS VH)</title>
     <!-- Load Tailwind CSS -->
@@ -82,7 +84,7 @@
                 </a>
                 <!-- Telegram Button 3 -->
                 <a href="https://t.me/+85589663888" target="_blank" class="block w-full text-center bg-accent-yellow text-primary-blue py-3 px-6 text-lg font-semibold rounded-lg hover:bg-yellow-300 transition duration-300 transform hover:scale-[1.02]">
-                    <span class="text-xl mr-2">&#9992;</span> Telegram Chat (Line 3)
+                    <span class="text-xl mr-2">&#9992;</span> Chat (Line 3)
                 </a>
             </div>
             
@@ -96,9 +98,9 @@
     <header class="sticky top-0 z-50 bg-white shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-2">
-                <!-- School Logo/Icon -->
-                <div class="text-3xl font-extrabold text-accent-yellow transition duration-300 hover:text-primary-blue">
-                    &#10031;
+                <!-- School Logo/Icon - CHANGED TO APPLE -->
+                <div class="text-3xl font-extrabold text-red-600 transition duration-300 hover:text-primary-blue">
+                    &#127822;
                 </div>
                 <h1 class="text-xl font-bold text-gray-800 hidden sm:block">PSIS VH</h1>
             </div>
@@ -153,8 +155,8 @@
                             <!-- Arms Waving -->
                             <path d="M30 65 Q15 75, 20 85" stroke="#FFEAA7" stroke-width="6" stroke-linecap="round"/>
                             <path d="M70 65 Q85 75, 80 85" stroke="#FFEAA7" stroke-width="6" stroke-linecap="round"/>
-                            <!-- Star decoration -->
-                            <path d="M50 20 L53 27 L60 28 L55 33 L56 40 L50 36 L44 40 L45 33 L40 28 L47 27 Z" fill="#FBBF24"/>
+                            <!-- Apple decoration (replacing star) -->
+                            <text x="40" y="30" font-size="20" fill="#DC2626">&#127822;</text>
                         </svg>
                     </div>
                 </div>
@@ -189,7 +191,7 @@
             <div class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-8">
                 <!-- Feature 1 -->
                 <div class="p-6 bg-bg-light rounded-2xl card-shadow text-center">
-                    <div class="text-4xl text-safe-green mb-4">&#127775;</div>
+                    <div class="text-4xl text-safe-green mb-4">&#127822;</div>
                     <h3 class="text-xl font-bold text-gray-900">Play-Based Learning</h3>
                     <p class="mt-2 text-gray-600">
                         Children explore concepts through hands-on activities and imaginative play, making education enjoyable.
