--- a/index.html
+++ b/index.html
@@ -94,10 +94,8 @@
     <header class="sticky top-0 z-50 bg-white shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-2">
-                <!-- School Logo/Icon - Changed from Apple to Book -->
-                <div class="text-3xl font-extrabold text-red-600 transition duration-300 hover:text-primary-blue">
-                    &#128218; 
-                </div>
+                <!-- School Logo/Icon: Using the provided external URL -->
+                <img src="https://psisvh.vercel.app/logo.png" alt="PSIS VH School Logo" class="h-8 w-8 object-contain transition duration-300 transform hover:scale-105" />
                 <h1 class="text-xl font-bold text-gray-800 hidden sm:block">PSIS VH</h1>
             </div>
             <!-- Mobile-friendly Navigation Links -->
