--- a/index.html
+++ b/index.html
@@ -355,11 +355,11 @@
                 </button>
             </div>
 
-            <!-- Map Iframe -->
+            <!-- Map Iframe - UPDATED WITH USER'S SPECIFIC EMBED SRC -->
             <div class="mt-10 w-full max-w-4xl mx-auto rounded-xl overflow-hidden card-shadow">
                 <iframe
                     title="School Location Map"
-                    src="https://maps.google.com/maps?q=Building%20582,%20National%20Road%201,%20Phum%20Kdai%20Takoy,%20Sangkat%20Veal%20Sbov,%20Khan%20Chbar%20Ampov,%20Phnom%20Penh&t=&z=15&ie=UTF8&iwloc=&output=embed"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d244.3242244258511!2d104.96633803042894!3d11.53839712576425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310957549011fa67%3A0x71ead2bce1b8b026!2zPaFqw7FzYfEgnzEm3N0cmEgSW50ZXJuYXRpb25hbCBTY2hvb2wgLSBWYW4gSG9uZw!5e0!3m2!1sen!2skh!4v1760922073785!5m2!1sen!2skh"
                     width="100%"
                     height="300"
                     frameborder="0"
